# itstool

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac  itstool  itstool.1.in  itstool.in  setup.py.in
its/: Makefile.am  docbook.its  docbook5.its  its.its  mallard.its  ttml.its  xhtml.its
tests/: Attributes1.ll.po  Attributes1.pot  Context.ll.po  Context.ll.xml  Context.pot  Context.xml  Droprule.ll.po  Droprule.ll.xml  Droprule.pot  Droprule.xml  EX-locNote-element-1.pot  EX-locNote-selector-2.pot  EX-locNote-selector-2.xml  EX-locNotePointer-attribute-1.pot  EX-locNoteRef-attribute-1.pot  EX-locNoteRefPointer-attribute-1.pot  IT-attributes-1.ll.po  IT-attributes-1.pot  IT-attributes-2.ll.po  IT-attributes-2.ll.xml  IT-attributes-2.pot  IT-attributes-2.xml  IT-context-1.ll.po  IT-context-1.pot  IT-dropRule-1.ll.po  IT-dropRule-1.ll.xml  IT-dropRule-1.pot  IT-externalRef1.ll.po  IT-externalRef1.ll.xml  IT-externalRef1.pot  IT-externalRef1.txt  IT-externalRef1.xml  IT-join-1.cs.po  IT-join-1.de.po  IT-join-1.fr.po  IT-join-1.joined.xml  IT-join-1.ll.xml  IT-join-1.pot  IT-join-1.xml  IT-keep-entities-1.ll.po  (+88 more)
tests/ExternalResource/: ExternalResource1Xml.pot  ExternalResource2Xml.pot  ExternalResource3Xml.pot  movie.avi
tests/ITS-2.0-Testsuite/: README  run_tests.sh
tests/IdValue/: idvalue1xml.pot  idvalue2xml.pot  idvalue3xml.pot
tests/LocNote/: EX-locNote-element-1.pot  EX-locNote-selector-2.pot  EX-locNotePointer-attribute-1.pot  EX-locNotePointer-attribute-1.xml  EX-locNoteRef-attribute-1.pot  EX-locNoteRef-attribute-1.xml  LocNote1.pot  LocNote1.xml  (+8 more)
(+266 files in other folders)
